# scope-recall

./: CHANGELOG.md  DESIGN.md  README.md  config.json  config.py  plugin.yaml  pyproject.toml
docs/: memory.stack.contract.md  stability.md
scripts/: check.release.py
tests/: test_governance_contract_regressions.py  test_release.py
